refactor: replace Collections.singletonList with List.of for improved readability